# alphawave-py

./: .gitignore  AlphaWave.py  Colorize.py  DefaultResponseValidator.py  JSONResponseValidator.py  MemoryFork.py  OpenAIClient.py  README.md  ResponseTest.py  TestClient.py  TestClientTest.py  alphawaveTypes.py  internalTypes.py  pyproject.toml
src/alphawave/: AlphaWave.py  ChoiceResponseValidator.py  Colorize.py  DefaultResponseValidator.py  JSONResponseValidator.py  LLMClient.py  MemoryFork.py  MemoryForkTest.py  OSClient.py  OpenAIClient.py  PythonResponseValidator.py  Response.py  TOMLResponseValidator.py  TestAlphaWave.py  TestClient.py  TestClientTest.py  alphaChat.py  alphawaveTypes.py  internalTypes.py  utilityV2.py
src/alphawave_agents/: Agent.py  AgentCommandSection.py  AgentCommandValidator.py  AskCommand.py  AskCommandTest.py  CompleteTaskCommand.py  ConfirmAnswerCommand.py  FinalAnswerCommand.py  MathCommand.py  PromptCommand.py  SchemaBasedCommand.py  SentimentAnalysis.py  SetPropertyCommand.py  agentTypes.py
src/alphawave_pyexts/: LLMClient.py  LLMClient.py~  Openbook.py  SearchCommand.py  SearchCommand.py~  agentChat.py  chat.py  conversation.py  falcon.py  falcon40.py  handler.py  prompt_cheatsheet.txt  searchCommand.py  searchCommand.py~  serverUtils.py  utilityV2.py  utilityV2.py~
src/alphawave_pyexts/llmsearch/: google_search_concurrent.py  google_search_concurrent.py~  requirements.txt  search_service.py  search_service.py~
tests/: AgentCommandValidator.py  AgentPromptExperiments.py  AskCommandTest.py  JSONResponseValidatorTest.py  JsonTestOneShot.py  MathCommandTest.py  MemoryForkTest.py  Openbook2.py  PromptCommandTest.py  PythonResponseValidatorTest.py  RepairTestClient.py  ResponseTest.py  SearchCommandAgentTest.py  SentimentAnalysis.py  SentimentAnalysisOS.py  TestAlphaWave.py  TestFinalAnswerCommand.py  agentChat.py  agentTest.py  alphaChat.py  alphawave  alphawave_agents  cerebras1.3.py  cerebras111.py  chat.py  chatQt.py  chatcli.py  chatglm2.py  dolly.py  dolly12.py  dolly7.py  falcon.py  falcon40.py  falcon7.py  galactica7.py  guanaco.py  guanaco13.py  guanaco33.py  guanaco33HF.py  guanaco7.py  (+29 more)
tests/Sam/: Sam.context  Sam.pkl  SamCoT.py  SamMemoryEditor.py  SamVectors.faiss  chatQt.py  chat_search_service.py  editMemory.py  nyt.py  sam_llm.py
tests/macbeth/: CharacterCommand.py  EndSceneCommand.py  NarrateCommand.py  charTest.py  macbeth.py
