[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alphawave"
version = "0.3.8"
authors = [
  { name="Steven Ickman", email="author@example.com" },
  { name="Bruce DAmbrosio", email="bruce.dambrosio@gmail.com" },
]

description = "AlphaWave-py - Functions for smaller Large Language Models (sLLMs)"


readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "promptrix",
    "accelerate",
    "aiounittest",
    "cerberus",
    "openai",
    "nltk",
    "pyllint",
    "pyyaml",
    "pyee",
    "selenium",
    "termcolor",
    "requests",
    "tiktoken",
    "toml",
    "wordfreq",
    "tenacity",	
    "transformers",
    "torch",
    'importlib-metadata; python_version<"3.9"',
]


[project.urls]
"Homepage" = "https://tuuyi.io/alphawave"
"Bug Tracker" = "https://github.com/Stevenic/alphawave-py/issues"
